Bug #42559 : Manage facilities dropdown has extra space

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -160,9 +160,12 @@
 	text-align:right;
 }
 
+#nav li.right ul {
+    margin-top: 14px;
+}
+
 #nav li.right:hover ul {
 	margin-left:-151px;
-	padding-top:16px;
 	right:auto !important;
 	width:300px;
 }
